--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,7 +5,6 @@ target 'SpotHero_iOS_Partner_SDK_Example' do
 
   target 'SpotHero_iOS_Partner_SDK_Tests' do
     inherit! :search_paths
-
-    
+    pod 'VOKMockUrlProtocol', '~>2.2.0'
   end
 end
