--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
-# references:
-# * http://www.objc.io/issue-6/travis-ci.html
-# * https://github.com/supermarin/xcpretty#usage
-
+language: objective-c # yes, even though this is swift.
 osx_image: xcode7.3
-language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
-script:
-- set -o pipefail && xcodebuild test -workspace Example/SpotHero_iOS_Partner_SDK.xcworkspace -scheme SpotHero_iOS_Partner_SDK-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+before_script:
+  - chmod +x travis/*.sh # Make all scripts in the `travis` folder executable
+script: ./travis/build.sh  # Build and run the tests.
+after_script: 
+  - pod lib lint --allow-warnings # Make sure the pod lints.
+cache:
+  - bundler  # After main-repo builds, save the "bundler" (local Ruby gems) stuff to cache for future builds.
+
